--- a/todo-list/package.json
+++ b/todo-list/package.json
@@ -10,10 +10,12 @@
     "@mui/material": "^5.10.17",
     "@mui/styled-engine-sc": "^5.10.16",
     "@mui/x-date-pickers": "^5.0.9",
+    "@mui/x-date-pickers-pro": "^5.0.9",
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dayjs": "^1.11.7",
     "eslint": "^8.29.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "moment": "^2.29.4",
