--- a/todo-list/package.json
+++ b/todo-list/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
+    "unique-string": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
