--- a/todo-list/.eslintrc.json
+++ b/todo-list/.eslintrc.json
@@ -28,6 +28,8 @@
         "import/extensions": "off",
         "react/destructuring-assignment": "off",
         "no-param-reassign":"off",
-        "react/jsx-props-no-spreading": "off"
+        "react/jsx-props-no-spreading": "off",
+        "react-hooks/exhaustive-deps": "off"
+
     }
 }
